teamAsize default Value set up, del button size fixed on small screen

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -92,6 +92,11 @@ h1 p, .h1 p, .header p {
   border: 3px solid #50ed89;
   color: white;
 }
+@media screen and (max-width: 600px) {
+  .delBtn {
+    font-size: 1rem;
+  }
+}
 
 .positionToolBar.btn-toolbar {
   display: inline-flex;
