--- a/src/sass/_buttons.scss
+++ b/src/sass/_buttons.scss
@@ -45,6 +45,11 @@
         border: 3px solid $ColourSub;
         color: white;
     }
+
+     //on smaller screens
+     @media screen and(max-width : 600px){
+        font-size: 1rem;
+    }
     
 }
 
